0.14.0.AB (PRE-RELEASE):
-----------------------
- Fixes `MemTest Tool`
  * The MemTest fallback loader file was not recognised as a MemTest loader
  * Hence MemTest could only be run via explicit `MemTest` efi files
  * This bug was introduced in v0.12.0.AN (Commit 44b53e8)
- Improves `Ventoy` Handling
  * Removes multiple redundant/invalid loader options that otherwise appear
  * Displays an `os_ventoy` icon if present
- Improves `ScaleUI` Handling
  * Eliminates extra UI scaling that may happen on main screen rescans
- Improves `SyncAPFS` Handling
  * Handles synced multi instance APFS container volumes in DontScanVolumes list
  * Stores APFS Roles in volume object instead of retrieving such each time
- Improves Misc `External Screen` Tool Handling
  * Some tools that run external screens, such as `GDisk`, may change volume device paths
  * Hence, on return, RefindPlus did not operate as it should
  * Previously fixed but re-emerged and now addressed again
- Improves Misc Item Handling
  * Linux Param File Handling
    - A memory conflict meant the files were not always read
  * Filesystem Drivers
    - Failure to install on some handles
  * GPT Handling
    - Misc minor tweaks
  * Comma Delimited Strings Handling
    - Handles leading spaces within the string
  * Loader Icon Handling
    - Provides generic `Linux` fallback for some distros
    - Prevents fallback loaders with invalid architectures from being displayed
  * `AlsoScan` Feature
    - The `@root/boot` path was removed from to the default `also_scan_dirs` list
    - Added in v0.13.3.AD but users should be able to add this if required
- Renames Misc Configuration Tokens
  * `decline_nvram_protect` to `disable_nvram_protect`
  * `decline_reload_gop` to `disable_reload_gop`
  * `decline_apfs_load` to `disable_apfs_load`
  * `decline_apfs_mute` to `disable_apfs_mute`
  * `decline_apfs_sync` to `disable_apfs_sync`
  * `decline_apple_fb` to `disable_provide_fb`


0.14.0.AA (13 Jun 2023):