@@ -124,6 +124,7 @@ REFIT_CONFIG GlobalConfig = {
     /* HelpIcon = */ TRUE,
     /* HelpTags = */ TRUE,
     /* HelpText = */ TRUE,
+    /* HelpScan = */ TRUE,
     /* NormaliseCSR = */ FALSE,
     /* ShutdownAfterTimeout = */ FALSE,
     /* Install = */ FALSE,
@@ -2700,6 +2701,7 @@ EFI_STATUS EFIAPI efi_main (
     LOG_MSG("%s      ReloadGOP:- '%s'",    TAG_ITEM_B(GlobalConfig.ReloadGOP       ));
     LOG_MSG("%s      CheckDXE:- '%s'",     TAG_ITEM_C(GlobalConfig.RescanDXE       ));
     LOG_MSG("%s      SyncAPFS:- '%s'",     TAG_ITEM_C(GlobalConfig.SyncAPFS        ));
+    LOG_MSG("%s      HelpScan:- '%s'",     TAG_ITEM_C(GlobalConfig.HelpScan        ));
     LOG_MSG("%s      HelpTags:- '%s'",     TAG_ITEM_C(GlobalConfig.HelpTags        ));
     LOG_MSG("%s      HelpIcon:- '%s'",     TAG_ITEM_C(GlobalConfig.HelpIcon        ));
     LOG_MSG("%s      AlignCSR:- ",         OffsetNext                               );
