@@ -60,6 +60,7 @@ csr_normalise         |Removes the `APPLE_INTERNAL` bit, when present, to permit
 decline_help_icon     |Disables feature that may improve loading speed by preferring generic icons
 decline_help_tags     |Disables feature that ensures hidden display entries can always be unhidden
 decline_help_text     |Disables complementary text colours if not required
+decline_help_scan     |Disables feature that skips showing misc typically unwanted loaders
 decouple_key_f10      |Unmaps the `F10` key from native screenshots (the `\` key remains mapped)
 disable_amfi          |Disables AMFI Checks on macOS if required
 disable_apfs_load     |Disables inbuilt provision of APFS filesystem capability
