@@ -81,6 +81,16 @@
 #
 #decline_help_text
 
+# The "HelpScan" feature always adds program defaults to 'dont_scan-xyz' lists.
+# This deviates from the upstream implementation where such program defaults are
+# overwritten unless a "+" item is added as the first item of user defined entries.
+# These program defaults ensure that certain items are not shown as first row icons.
+# Users that wish to disable the default "HelpScan" feature can activate this option.
+#
+# The "HelpScan" feature is enabled when commented out
+#
+#decline_help_scan
+
 # RefindPlus defaults to mapping both 'F10' and '\' (forward slash) to
 # the inbuilt screenshot feature. When this option is active, the F10
 # key is unlinked whilst the '\' key stays linked to screenshots. It
